src/main/java/com/example/team_work_management/exception/error/PriorityLevelNotFoundException.java
package com.example.team_work_management.exception.error;

public class PriorityLevelNotFoundException extends RuntimeException{
    public PriorityLevelNotFoundException(String message){
        super(message);
    }
}
